# nginy

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CMakeCache.txt  Makefile  SQLike  cmake_install.cmake  compile_commands.json  nginy
cmake/.cache/clangd/index/: main.c.1689C69269DAD54B.idx
src/: liason.py  main.c  server.c  server.h
